<resources>
    <string name="app_name">Ubuntu One Files</string>
    <string name="tutorial_activity_label">Tutorial</string>
    <string name="sign_up_now">Sign up now</string>
    <string name="intro_header.1">Your cloud</string>
    <string name="intro_header.2">Your photos</string>
    <string name="intro_header.3"></string>
    <string name="intro_header.4">Getting started</string>
    <string name="intro_text.1">Store your files, photos and music safely in Ubuntu One and access them from any of your devices, wherever you are. Get 5GB of cloud storage for FREE.</string>
    <string name="intro_text.2">Snap a photo and it will instantly appear online and on all your devices. Easily share your shots with friends, family, colleagues or on social networks.</string>
    <string name="intro_text.3">Add more cloud storage when you need it or stream your music online or on your mobile. Music Streaming has 20GB of extra cloud storage built in - try it free for 30 days.</string>
    <string name="intro_text.4">Go to one.ubuntu.com/download and follow our simple guide to installing Ubuntu One on all your devices. Ubuntu One works on Windows, Android, iOS, Ubuntu, and via the Web.</string>
    <string name="login_activity_label">Sign in</string>
    <string name="new_account">I don\'t have an account</string>
    <string name="sign_in">Sign in</string>
    <string name="signing_in">Signing in&#8230;</string>
    <string name="signing_in_to_u1">Signing in to Ubuntu One&#8230;</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_desc">Please provide a few details below to register for your Ubuntu One account.</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_desc">Must be at least 8 characters long and must contain at least one number and an upper case letter.</string>
    <string name="show_password">Show password</string>
    <string name="security">Security</string>
    <string name="loading_captcha">Loading captcha, please wait&#8230;</string>
    <string name="loading_captcha_failed">Oops! Touch here for new image.</string>
    <string name="captcha_unreadable">(Can\'t read? Touch the image.)</string>
    <string name="captcha_solution">Type the two words:</string>
    <string name="getting_captcha">Getting captcha&#8230;</string>
    <string name="getting_captcha_failed">Failed to get captcha!</string>
    <string name="tap_to_change_captcha">Tap here to change captcha.</string>
    <string name="solution">Captcha solution</string>
    <string name="solution_cannot_be_empty">You must fill in the captcha solution.</string>
    <string name="signup_footer_tos"><![CDATA[
        By creating an account you agree to the <br />
        Ubuntu Account <a href="http://ubuntu.com/legal">Terms of Service</a>.
        ]]>
    </string>
    <string name="signing_up_header">Signing up&#8230;</string>
    <string name="congratulations">Congratulations</string>
    <string name="check_your_email">A confirmation email has been sent to the address you provided.\nSimply follow the link in the email to activate your Ubuntu One account.</string>
    <string name="almost_there">Almost there!</string>
    <string name="fullname_invalid">Name can\'t be empty.</string>
    <string name="username_invalid">Invalid username (email).</string>
    <string name="password_invalid">Password must be at least 8 characters long, contain one upper case letter and one digit.</string>
    <string name="one_account_only">Currently only one Ubuntu One account is supported. If you wish to sign in as a different user, please remove the old account first.</string>
    <string name="authentication_error">Authentication failed. Probably credentials you have provided are incorrect.</string>
    <string name="connectivity_error">Connection is down or service is unavailable. Please try again later.</string>
    <string name="please_reauthenticate">Please reauthenticate.</string>
    <string name="you_have_been_signed_out">You have been signed out.</string>
    <string name="files_activity_label">Ubuntu One Files</string>
    <string name="no_network">No network</string>
    <string name="network_required">You need Wi-Fi or Mobile network to use the app.</string>
    <string name="loading_files">Loading files&#8230;</string>
    <string name="no_files">No files.</string>
    <string name="folder_is_empty">This folder is empty.</string>
    <string name="purchased_music_display_name">Purchased Music</string>
    <string name="downloading">Downloading&#8230;</string>
    <string name="uploading">Uploading&#8230;</string>
    <string name="deleting">Deleting&#8230;</string>
    <string name="download_failed_tap_resume">Download failed, tap to resume.</string>
    <string name="upload_failed_tap_retry">Upload failed, tap to retry.</string>
    <string name="last_modified_fmt">last modified %1$s</string>
    <plurals name="last_modified_minutes">
        <item quantity="one">%d minute ago</item>
        <item quantity="other">%d minutes ago</item>
    </plurals>
    <plurals name="last_modified_hours">
        <item quantity="one">%d hour ago</item>
        <item quantity="other">%d hours ago</item>
    </plurals>
    <plurals name="last_modified_days">
        <item quantity="one">%d day ago</item>
        <item quantity="other">%d days ago</item>
    </plurals>
    <string name="add_image">Add image</string>
    <string name="add_video">Add video</string>
    <string name="add_audio">Add audio</string>
    <string name="add_file">Add file</string>
    <string name="new_folder">New folder</string>
    <string name="pick_image">Pick image with</string>
    <string name="pick_video">Pick video with</string>
    <string name="pick_audio">Pick audio with</string>
    <string name="pick_file">Pick file with</string>
    <string name="open_with">Open with</string>
    <string name="context_download">Download</string>
    <string name="context_cancel_download">Cancel download</string>
    <string name="context_create_link">Share link</string>
    <string name="context_share_link">Share link</string>
    <string name="context_disable_link">Disable link</string>
    <string name="context_rename">Rename</string>
    <string name="context_delete">Delete</string>
    <string name="context_delete_from_device">Delete from device</string>
    <string name="preferences">Settings</string>
    <string name="upload_here">Upload here</string>
    <string name="creating_link">Creating link&#8230;</string>
    <string name="dialog.share_link_title">Share link</string>
    <string name="shared_from_u1">Shared from Ubuntu One</string>
    <string name="no_space">No space</string>
    <string name="no_space_message_fmt">Needs %1$s of free space, you have only %2$s left.</string>
    <string name="create_folder">Create folder</string>
    <string name="autoupload_description_line1">Automatically upload your photos</string>
    <string name="autoupload_description_line2">Never lose a photo from your phone again.</string>
    <string name="network_wifi_or_mobile">Use both Wi-Fi and mobile network</string>
    <string name="network_wifi_only">Only use Wi-Fi</string>
    <string name="autoupload_settings_notice">You can change which folders are uploaded in Settings.</string>
    <string name="autoupload_mobile_network_notice">Uploading over a mobile network will use your data connection and may cost you money. You can turn this off at any time in Settings.</string>
    <string name="autoupload_skip">Skip for now</string>
    <string name="autoupload_enable">Enable</string>
    <string name="preferences_activity_label">Settings</string>
    <string name="category_account">Account</string>
    <string name="username">User name</string>
    <string name="current_plan">Current plan</string>
    <string name="invite_friend">Invite a friend!</string>
    <string name="invite_friend_summary">Get additional 500MB of storage</string>
    <string name="upgrade_storage">Upgrade storage</string>
    <string name="upgrade_storage_summary">Still not enough? Get more 20GB packs!</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_out_summary">Unlinks this device from U1</string>
    <string name="category_uploads">Uploads</string>
    <string name="auto_retry_failed">Auto-retry failed</string>
    <string name="retry_failed_uploads_now">Retry now</string>
    <string name="no_pending_uploads">No pending uploads</string>
    <string name="cancel_all">Cancel all</string>
    <string name="cancel_failed">Cancel failed</string>
    <string name="category_photo_auto_upload">Photo Auto Upload</string>
    <string name="auto_upload_photos">Auto Upload photos</string>
    <string name="upload_all_photos_now">Upload all photos now</string>
    <string name="only_on_wifi">Only on Wi-Fi</string>
    <string name="only_when_charging">Only when charging</string>
    <string name="also_when_roaming">Also when roaming</string>
    <string name="show_notifications">Show notifications</string>
    <string name="upload_photos_to">Upload photos to</string>
    <string name="select_folders_to_upload">Select folders to upload</string>
    <string name="category_manage">Manage</string>
    <string name="clear_cache">Clear cache</string>
    <string name="clear_cache_summary">Clears cached previews and thumbs</string>
    <string name="visit_account_online">Visit account online</string>
    <string name="category_support">Support</string>
    <string name="send_feedback">Send feedback</string>
    <string name="report_problem">Report problem</string>
    <string name="faq">Ubuntu One FAQ</string>
    <string name="tell_me_more">Tell me more</string>
    <string name="tell_me_more_summary">Ubuntu One services details</string>
    <string name="collect_logs">Collect logs</string>
    <string name="collect_logs_summary">Collect developer-friendly information</string>
    <string name="review_logs">Review logs</string>
    <string name="review_logs_summary">You can review collected logs.</string>
    <string name="send_logs">Send collected logs</string>
    <string name="send_logs_summary">Send logs to developers.</string>
    <string name="category_about">About</string>
    <string name="version">Version</string>
    <string name="recent_changes">Recent changes</string>
    <string name="project_website">Project website</string>
    <string name="license">License</string>
    <string name="license_summary">This is open source software.</string>
    <string name="storage_management_title">Storage management</string>
    <string name="device_storage_info_header">Device storage info</string>
    <string name="storage_available_title">Storage available</string>
    <string name="storage_used_title">Storage used by Ubuntu One</string>
    <string name="files_info_header">Files info</string>
    <string name="files_in_cloud_title">Files in cloud</string>
    <string name="synced_files_title">Synced files</string>
    <string name="cached_files_title">Cached files</string>
    <string name="manage_storage_header">Manage</string>
    <string name="refresh_stats_title">Refresh stats</string>
    <string name="refresh_stats_summary">Tap here to refresh</string>
    <string name="check_missing_files_title">Check missing files</string>
    <string name="check_missing_files_summary">Rescan for physically missing files</string>
    <string name="remove_cached_files_title">Remove cached files</string>
    <string name="remove_cached_files_summary">Remove downloaded non-synced files</string>
    <string name="limit_storage_title">Limit storage</string>
    <string name="limit_storage_summary">Choose how much space can be used</string>
    <string name="unselect_synced_title">Unselect synced</string>
    <string name="unselect_synced_summary">Selectively stop file sync</string>
</resources>