<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:u1f="http://schemas.android.com/apk/res/com.ubuntuone.android.files"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@drawable/action_bar_background">
        
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            
            android:layout_marginLeft="6dp"
            
            android:adjustViewBounds="true"
            
            android:src="@drawable/u1_logo" />
        
    </LinearLayout>
    
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fadeScrollbars="true"
        android:fillViewport="true" >
        
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
            
            <!-- Intro text -->
            
            <com.ubuntuone.android.files.widget.TextViewPlus
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                
                android:layout_marginTop="@dimen/body_copy_15"
                android:layout_marginBottom="@dimen/body_copy_15"
                android:layout_marginLeft="@dimen/registration_label_padding"
                
                android:textColor="@color/text_dark_grey"
                android:textSize="@dimen/text_size_medium"
                u1f:customFont="Ubuntu-B.ttf"
                android:text="@string/sign_in" />
            
            <include layout="@layout/horizontal_separator" />
            
            <!-- Email -->
            
            <com.ubuntuone.android.files.widget.TextViewPlus
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                
                android:layout_marginTop="@dimen/body_copy_05"
                android:layout_marginBottom="@dimen/body_copy_05"
                android:layout_marginLeft="@dimen/registration_label_padding"
                
                android:textColor="@color/text_dark_grey"
                android:textSize="@dimen/text_size_smaller"
                u1f:customFont="Ubuntu-B.ttf"
                android:text="@string/email" />
            
            <include
                android:id="@+id/email_error"
                layout="@layout/error_textview" />
            
            <com.ubuntuone.android.files.widget.EditTextPlus
                android:id="@+id/sso.username"
                
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                
                android:layout_marginTop="0dp"
                android:layout_marginRight="@dimen/registration_field_padding"
                android:layout_marginBottom="@dimen/body_copy_05"
                android:layout_marginLeft="@dimen/registration_field_padding"
                
                android:inputType="textEmailAddress" />
            
            <include layout="@layout/horizontal_separator" />
            
            <!-- Password -->
            
            <com.ubuntuone.android.files.widget.TextViewPlus
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                
                android:layout_marginTop="@dimen/body_copy_05"
                android:layout_marginBottom="@dimen/body_copy_05"
                android:layout_marginLeft="@dimen/registration_label_padding"
                
                android:textColor="@color/text_dark_grey"
                android:textSize="@dimen/text_size_smaller"
                u1f:customFont="Ubuntu-B.ttf"
                android:text="@string/password"
                android:imeOptions="actionDone" />
            
            <include
                android:id="@+id/password_error"
                layout="@layout/error_textview" />
            
            <com.ubuntuone.android.files.widget.EditTextPlus
                android:id="@+id/sso.password"
                
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                
                android:layout_marginTop="2dp"
                android:layout_marginRight="@dimen/registration_field_padding"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="@dimen/registration_field_padding"
                
                android:inputType="textPassword" />
            
            <!-- Because of provided png, we need a larger left margin. -->
            
            <include layout="@layout/horizontal_separator" />
            
            <com.ubuntuone.android.files.widget.ButtonPlus
                android:id="@+id/sign_in"
                
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                
                android:layout_marginTop="3dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="22dp"
                android:layout_marginLeft="20dp"
                
                android:minHeight="46dp"
                
                android:background="@drawable/button_orange"
                
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_medium"
                u1f:customFont="Ubuntu-B.ttf"
                android:text="@string/sign_in" />
        </LinearLayout>
    
    </ScrollView>

</LinearLayout>

